<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--    result-->

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="false"
            android:gravity="start"
            android:inputType="none"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

    </LinearLayout>

<!--    button-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:color="@color/IndianRed"
        android:orientation="horizontal"
        android:textColor="@color/white">

        <Button
            android:id="@+id/oneBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/one"
            android:textSize="20sp" />

        <Button
            android:id="@+id/twoBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/two"
            android:textSize="20sp" />

        <Button
            android:id="@+id/threeBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/three"
            android:textSize="20sp" />

        <Button
            android:id="@+id/plusBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/plus"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/IndianRed"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fourBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/four"
            android:textSize="20sp" />

        <Button
            android:id="@+id/fiveBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/five"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sixBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/six"
            android:textSize="20sp" />

        <Button
            android:id="@+id/minusBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/minus"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sevenBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/seven"
            android:textSize="20sp" />

        <Button
            android:id="@+id/eightBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/eight"
            android:textSize="20sp" />

        <Button
            android:id="@+id/nineBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/nine"
            android:textSize="20sp" />

        <Button
            android:id="@+id/timesBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/times"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clearBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/clear"
            android:textSize="20sp" />

        <Button
            android:id="@+id/zeroBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/zero"
            android:textSize="20sp" />

        <Button
            android:id="@+id/equalBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/equal"
            android:textSize="20sp" />

        <Button
            android:id="@+id/divideBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/IndianRed"
            android:text="@string/divide"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">
<Button
    android:id="@+id/historyBTN"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="#FF6200EE"
    android:text="@string/history"
    android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:autofillHints="false"
            android:gravity="start"
            android:inputType="none"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

    </LinearLayout>


</LinearLayout>